@@ -1,6 +1,7 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.intro;
 
+import edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsConfig;
 import edu.colorado.phet.sugarandsaltsolutions.common.SugarAndSaltSolutionsModule;
 
 /**
@@ -11,13 +12,13 @@ import edu.colorado.phet.sugarandsaltsolutions.common.SugarAndSaltSolutionsModul
 public class IntroModule extends SugarAndSaltSolutionsModule {
     private final IntroModel model;
 
-    public IntroModule() {
-        this( new IntroModel() );
+    public IntroModule( SugarAndSaltSolutionsConfig backgroundColor ) {
+        this( new IntroModel(), backgroundColor );
     }
 
-    public IntroModule( final IntroModel model ) {
+    public IntroModule( IntroModel model, SugarAndSaltSolutionsConfig config ) {
         super( "Intro", model.clock );
         this.model = model;
-        setSimulationPanel( new IntroCanvas( this.model ) );
+        setSimulationPanel( new IntroCanvas( this.model, config ) );
     }
 }
